<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_nav_sim</name>
  <version>2.1.0</version>
  <description>
    Cyberpunk-style ROS 2 Navigation Simulator.
    A standalone Nav2 stack simulation with A* global planning,
    DWA local planning, and full sensor suite — no ROS 2 installation required.
  </description>
  <maintainer email="dev@ros2-nav-sim.dev">ros2_nav_sim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_common</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
